--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>{{title}}</title>
-      <link rel="stylesheet" href="/stylesheets/style.css" />
-   </head>
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <title>{{title}}</title>
+   <link rel="stylesheet" href="/stylesheets/style.css" />
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"></script>
+</head>
 
-   <body>
-    {{#if loggedInUser}}
-      <div>
-          Welcome, {{loggedInUser}}
-          <a href="/movies-search">Search Movies</a>
-          <a href="/auth/{{loggedId}}">My User</a>
-          <form action="/logout" method="POST">
-            <button type="submit">Logout</button>
-          </form>
-      </div>
+<body>
+   {{#if loggedInUser}}
+   <div>
+      Welcome, {{loggedInUser}}
+      <a href="/movies-list">Search Movies</a>
+      <a href="/auth/{{loggedId}}">My User</a>
+      <form action="/logout" method="POST">
+         <button type="submit">Logout</button>
+      </form>
+   </div>
 
-      {{else}}
-         <a href="/signup">Sign up</a>
-         <a href="/login">Login</a>
-         <a href="/main">Main</a>
-         <a href="/movies-search">Search Movies</a>
-      {{/if}}
-      {{{body}}}
+   {{else}}
+   <a href="/signup">Sign up</a>
+   <a href="/login">Login</a>
+   <a href="/movies-list">Search Movies</a>
+   {{/if}}
+   {{{body}}}
 
-      <script src="/js/script.js"></script>
-   </body>
+   <script src="/js/script.js"></script>
+</body>
 
 </html>
