--- a/views/movie/movies-list.hbs
+++ b/views/movie/movies-list.hbs
@@ -6,7 +6,7 @@
 {{/each}}
  --}}
 <div class="row">
-    {{#each test.results}}
+    {{#each searchResult.results}}
 <div class="col-md-4">
     <div class="card cards-flex">
         <img class="card-img-top" src="{{poster}}" alt="{{title}}" />
