--- a/views/movie/movies-list.hbs
+++ b/views/movie/movies-list.hbs
@@ -12,7 +12,7 @@
         <img class="card-img-top" src="{{poster}}" alt="{{title}}" />
         <div class="card-body">
             <h5 class="card-title">{{title}}</h5>
-            {{!-- <a href="/albums/{{id}}">View albums</a> --}}
+            <a href="/movies/{{imdbid}}">View Movies</a>
         </div>
     </div>
 </div>
