--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,7 +18,7 @@
    {{#if loggedInUser}}
    <div>
       Welcome, {{loggedInUser}}
-      <a href="/movies-list">Search Movies</a>
+      <a href="/movies-search">Search Movies</a>
       <a href="/auth/{{loggedId}}">My User</a>
       <form action="/logout" method="POST">
          <button type="submit">Logout</button>
@@ -28,7 +28,7 @@
    {{else}}
    <a href="/signup">Sign up</a>
    <a href="/login">Login</a>
-   <a href="/movies-list">Search Movies</a>
+   <a href="/movies-search">Search Movies</a>
    {{/if}}
    {{{body}}}
 
