--- a/views/movie/movies-search.hbs
+++ b/views/movie/movies-search.hbs
@@ -8,13 +8,13 @@
 
 {{#if searchResult}}
 <div class="row">
-    {{#each searchResult.results}}
+    {{#each searchResult.results}} 
 <div class="col-md-4">
     <div class="card cards-flex">
         <img class="card-img-top" src="{{poster}}" alt="{{title}}" />
         <div class="card-body">
             <h5 class="card-title">{{title}}</h5>
-            {{!-- <a href="/albums/{{id}}">View albums</a> --}}
+            <a href="/movies-details/{{imdbid}}">View Details</a>
         </div>
     </div>
 </div>
