--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,6 +20,7 @@
       Welcome, {{loggedInUser}}
       <a href="/movies-search">Search Movies</a>
       <a href="/auth/{{loggedId}}">My User</a>
+      <a href="/favorites/{{loggedId}}">Favorites</a>
       <form action="/logout" method="POST">
          <button type="submit">Logout</button>
       </form>
