--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -3,6 +3,7 @@
 
 <h2>Signup</h2>
 {{!-- Primeira validation pra não dar erro no form --}}
+{{!--  enctype="multipart/form-data" --}}
 <form action="/signup" method="POST">
     {{!-- O required é pra ter a certeza que será escrito algo neste campo --}}
     <label for=""></label>
