--- a/views/auth/user-detail.hbs
+++ b/views/auth/user-detail.hbs
@@ -13,7 +13,16 @@
 
     <button type="submit">Update</button>
 </form>
+<h2>
 
+</h2>
+{{#if newArray}}
+{{#each newArray}}
+<p>Título: {{title}}</p>
+<img src="{{poster}}" alt="">
+
+{{/each}}
+{{/if}}
 {{#if errorMessage}}
     <p>{{errorMessage}}</p>
 {{/if}}
