--- a/views/auth/favorites-details.hbs
+++ b/views/auth/favorites-details.hbs
@@ -1,4 +1,10 @@
 <h1>Favorites-details</h1>
 
-<h3>Welcome, {{favoritesDetails.username}}</h3>
+<h3>Welcome, {{userDetail.username}}</h3>
 
+{{#if newArray}}
+    {{#each newArray}}
+        <p>Título: {{title}}</p>
+        <img src="{{poster}}" alt="">
+    {{/each}}
+{{/if}}
