--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,6 +21,7 @@
       <a href="/movies-search">Search Movies</a>
       <a href="/auth/{{loggedId}}">My User</a>
       <a href="/favorites/{{loggedId}}">Favorites</a>
+      <a href="/matches">Matches</a>
       {{!-- <a href="/favorites-list/{{loggedId}}">List</a> --}}
       <form action="/logout" method="POST">
          <button type="submit">Logout</button>
