Matches working fine, no more exceptions

--- a/views/movie/movies-details.hbs
+++ b/views/movie/movies-details.hbs
@@ -26,9 +26,11 @@
         </div>
 
             {{#if loggedInUser}}
+            {{!-- Favoritar --}}
             <form action="/favorites/{{movieDetails.imdbid}}/add" method="POST">
                <button type="submit">Favorite</button>
             </form>
+            {{!-- Deletar --}}
             {{/if}}
     </div>
 </div>
