--- a/views/auth/favorites-details.hbs
+++ b/views/auth/favorites-details.hbs
@@ -6,5 +6,8 @@
     {{#each newArray}}
         <p>Título: {{title}}</p>
         <img src="{{poster}}" alt="">
+        <form action="/movies-details/{{imdbid}}/delete" method="POST">
+           <button type="submit">Delete</button>
+        </form>
     {{/each}}
 {{/if}}
