--- a/views/auth/matches.hbs
+++ b/views/auth/matches.hbs
@@ -9,7 +9,7 @@
                 <img class="card-img-top" src="{{poster}}" alt="{{title}}" />
                 <div class="card-body">
                 <h5 class="card-title">{{title}}</h5>
-                <a href="/movies/{{imdbid}}">View Details</a>
+                <a href="/movies-details/{{imdbid}}">View Details</a>
             </div>
         </div>
 </div>
