--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,91 @@
-<h1>{{title}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Matchflix</title>
+	<link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+       crossorigin="anonymous"></script>
+</head>
+<body>
+	<nav class="navbar navbar-expand-lg navbar-light fixed-top">
+		<div class="container">
+			<a class="navbar-brand" href="/">Matchflix</a> <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav ml-auto">
+          <!-- <input class="form-control me-2" type="search" placeholder="Search for a Movie" aria-label="Search">
+          <button class="btn btn-danger" type="submit">Search</button> -->
+                    {{#if loggedInUser}}
+
+                    <li class="nav-item">
+						<a class="nav-link" href="/movies-search">Search Movies</a>
+					</li>
+                    <li class="nav-item">
+						<a class="nav-link" href="/auth/{{loggedId}}">My User</a>
+					</li>
+                    <li class="nav-item">
+						<a class="nav-link" href="/favorites/{{loggedId}}">Favorites</a>
+					</li>
+                    <li class="nav-item">
+						<a class="nav-link" href="/matches">Matches</a>
+					</li>
+                    {{else}}
+					<li class="nav-item">
+						<a class="nav-link" href="/signup">SignUp</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/login">Login</a>
+					</li>
+                    {{/if}}
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<div class="carousel slide" data-ride="carousel" id="carouselExampleIndicators">
+		<ol class="carousel-indicators">
+			<li class="active" data-slide-to="0" data-target="#carouselExampleIndicators"></li>
+			<li data-slide-to="1" data-target="#carouselExampleIndicators"></li>
+			<li data-slide-to="2" data-target="#carouselExampleIndicators"></li>
+		</ol>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img alt="First slide" class="d-block w-100" src="/images/cinema.jpeg">
+				<div class="carousel-caption d-none d-md-block">
+					<h5 class="animated bounceInRight" style="animation-delay: 1s">Watch a movie with your loved one!</h5>
+					<p class="animated bounceInLeft" style="animation-delay: 2s">Choose, Match and Watch</p>
+					<p class="animated bounceInRight" style="animation-delay: 3s"><button class="btn btn-danger" type="submit">Search</button></p>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img alt="Second slide" class="d-block w-100" src="/images/cinema2.jpeg">
+				<div class="carousel-caption d-none d-md-block">
+					<h5 class="animated slideInDown" style="animation-delay: 1s">Choose your movie</h5>
+					<p class="animated fadeInUp" style="animation-delay: 2s">Find where it streams</p>
+					<p class="animated zoomIn" style="animation-delay: 3s"><button class="btn btn-danger" type="submit">Search</button></p>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img alt="Third slide" class="d-block w-100" src="/images/cinema3.jpeg">
+				<div class="carousel-caption d-none d-md-block">
+					<h5 class="animated zoomIn" style="animation-delay: 1s">Watch together</h5>
+					<p class="animated fadeInLeft" style="animation-delay: 2s">Anywhere</p>
+					<p class="animated zoomIn" style="animation-delay: 3s"><button class="btn btn-danger" type="submit">Search</button></p>
+				</div>
+			</div>
+		</div><a class="carousel-control-prev" data-slide="prev" href="#carouselExampleIndicators" role="button"><span aria-hidden="true" class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" data-slide="next" href="#carouselExampleIndicators" role="button"><span aria-hidden="true" class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
+	</script> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js">
+	</script> 
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
+	</script>
+</body>
+</html>
