--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,15 +40,12 @@
                      <li class="nav-item">
 						      <a class="nav-link" href="/matches">Matches</a>
 					      </li>
-                     <li class="nav-item">
-						      <a class="nav-link" href="/logout">Logout</a>
-					      </li>
                   {{else}}
-					      <li class="nav-item">
+					      {{!-- <li class="nav-item">
 						      <a class="nav-link" href="/signup">SignUp</a>
-					      </li>
+					      </li> --}}
 					      <li class="nav-item">
-						      <a class="nav-link" href="/login">Login</a>
+						      <a class="nav-link" href="/login">Login/Signup</a>
 					      </li>
                   {{/if}}
 				</ul>
