--- a/views/auth/user-detail.hbs
+++ b/views/auth/user-detail.hbs
@@ -1,7 +1,10 @@
 <h1>
     Welcome, {{userDetail.username}}
 </h1>
-
+{{!-- LOGOUT BONITINHO - BOTÃO --}}
+                <form action="/logout" method="POST">
+                    <button class="btn btn-danger" type="submit">Logout</button>
+                </form>
 <img src="{{userDetail.image}}" alt="">
 
 <p>Wanna have some matches? </p>
@@ -10,9 +13,9 @@
 
     <label for="">Date</label>
     <input type="text" name="date" value={{userDetail.date}}>
-
     <button type="submit">Update</button>
 </form>
+
 <h2>
 
 </h2>
