--- a/views/auth/user-detail.hbs
+++ b/views/auth/user-detail.hbs
@@ -13,7 +13,7 @@
 
     <label for="">Date</label>
     <input type="text" name="date" value={{userDetail.date}}>
-    <button type="submit">Update</button>
+    <butto class="btn-update" type="submit">Update</button>
 </form>
 
 <h2>
