--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,10 +18,12 @@
 	<nav class="navbar navbar-expand-lg navbar-light fixed-top">
 		<div class="container">
 			<a class="navbar-brand" href="/">Matchflix</a> <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav ml-auto">
-          <!-- <input class="form-control me-2" type="search" placeholder="Search for a Movie" aria-label="Search">
-          <button class="btn btn-danger" type="submit">Search</button> -->
+			<div class="collapse navbar-collapse flex-search" id="navbarSupportedContent">
+				<ul class="navbar-nav ml-auto">            
+                <form class="center-form" action="/movies-search" method="POST">
+                    <input class="form-control me-2" type="search" name="title" placeholder="Search for a Movie" aria-label="Search">
+                    <button class="btn btn-danger" type="submit">Search</button>
+                </form>
                     {{#if loggedInUser}}
 
                     <li class="nav-item">
@@ -37,11 +39,11 @@
 						<a class="nav-link" href="/matches">Matches</a>
 					</li>
                     {{else}}
-					<li class="nav-item">
+					{{!-- <li class="nav-item">
 						<a class="nav-link" href="/signup">SignUp</a>
-					</li>
+					</li> --}}
 					<li class="nav-item">
-						<a class="nav-link" href="/login">Login</a>
+						<a class="nav-link" href="/login">Login/Signup</a>
 					</li>
                     {{/if}}
 				</ul>
