--- a/views/movie/movies-details.hbs
+++ b/views/movie/movies-details.hbs
@@ -1,4 +1,13 @@
 <h1>Movies Details</h1>
+{{#gt movieDetails.rating 5}}
+<div>Maior que 5</div>
+{{!-- FUNCIONANDO
+LEMBRAR DE:
+TROCAR A BORDA DOS CARDS DEPENDENDO DA NOTA
+AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA    
+
+ --}}
+{{/gt}}
 <div class="row">
 <div class="col-md-4">
     <div class="card cards-flex">
