--- a/views/auth/favorites-details.hbs
+++ b/views/auth/favorites-details.hbs
@@ -4,11 +4,22 @@
 
 {{#if newArray}}
     {{#each newArray}}
-        <p>Título: {{title}}</p>
-        <img src="{{poster}}" alt="">
-        <a href="/favorites-details/{{imdbid}}">View Details</a>
-        {{!-- <form action="/movies-details/{{imdbid}}/delete" method="POST">
-           <button type="submit">Delete</button>
-        </form> --}}
+<div class="movie_card" id="bright">
+    <div class="info_section">
+      <div class="movie_header">
+        <img class="locandina" src={{poster}}/>
+        <h1><a class="clean-a2" href="/movies-details/{{imdbid}}">{{title}}</a></h1>
+        <h4>{{year}}</h4>
+      </div>
+      <div class="movie_desc">
+      </div>
+      <div class="movie_social">
+        <ul>
+          {{!-- <li><a class="material-icons" href="/movies/{{imdbid}}"></a>Details</li> --}}
+        </ul>
+      </div>
+    </div>
+    <img class="blur_back src="{{poster}}" alt="">
+  </div>
     {{/each}}
 {{/if}}
