--- a/views/movie/movies-details.hbs
+++ b/views/movie/movies-details.hbs
@@ -8,40 +8,27 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
 
  --}}
 {{/gt}}
-<div class="row">
-<div class="col-md-4">
-    <div class="card cards-flex">
-        <img class="card-img-top" src="{{movieDetails.poster}}" alt="{{movieDetails.title}}" />
-        <div class="card-body">
-            <h5 class="card-title">{{movieDetails.title}}</h5>
-            <ul>
-                <li>
-                    Year: {{movieDetails.year}}
-                </li>
-                <li>
-                    Runtime: {{movieDetails.runtime}}
-                </li>
-                <li>
-                    Rating: {{movieDetails.rating}}/10
-                </li>
-                <li>
-                    Plot: {{movieDetails.plot}}
-                </li>
-                <li>
-                    Id: {{movieDetails.imdbid}}
-                </li>
-            </ul>
-            <a href="/movies-search">Search Movies</a>
-        </div>
+<div class="movie_card movie_card-details" id="bright">
+    <div class="info_section">
+      <div class="movie_header">
+        <img class="locandina" src={{movieDetails.poster}}/>
+        <h1><a class="clean-a2" href="/movies-details/{{imdbid}}">{{movieDetails.title}}</a></h1>
+        <ul>
+            <li><h4 class="movie-details-card-width">Runtime: {{movieDetails.runtime}}</h4></li>
+            <li><h4 class="movie-details-card-width">Rating: {{movieDetails.rating}}</h4></li>
+            <li><h4 class="movie-details-card-width">Plot: {{movieDetails.plot}}</h4></li>
+        </ul>
+      </div>
+      <div class="movie_desc">
+      </div>
+      <div class="movie_social">
+        <ul>
+          {{!-- <li><a class="material-icons" href="/movies/{{imdbid}}"></a>Details</li> --}}
+        </ul>
+      </div>
+    </div>
+    {{!-- <img class="blur_back" src={{poster}} alt=""> --}}
+</div>
 
-            {{#if loggedInUser}}
-            {{!-- Favoritar --}}
-            <form action="/favorites/{{movieDetails.imdbid}}/add" method="POST">
-               <button type="submit">Favorite</button>
-            </form>
-
-
-            {{!-- Deletar --}}
-            {{/if}}
     </div>
 </div>
