--- a/views/auth/favorites-details.hbs
+++ b/views/auth/favorites-details.hbs
@@ -19,7 +19,8 @@
         </ul>
       </div>
     </div>
-    <img class="blur_back src="{{poster}}" alt="">
+    {{!-- <img class="blur_back" src={{poster}} alt=""> --}}
+
   </div>
     {{/each}}
 {{/if}}
