--- a/views/movie/movies-favorites-details.hbs
+++ b/views/movie/movies-favorites-details.hbs
@@ -28,7 +28,7 @@
             {{#if loggedInUser}}
             {{!-- Favoritar --}}
             <form action="/favorites/{{movieDetails.imdbid}}/add" method="POST">
-               <button type="submit">Favorite</button>
+               <button type="submit"><img src="/images/fav-button.png" alt="saas"></button>
             </form>
             
             {{!-- Deletar --}}
