--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -38,9 +38,9 @@
 						      <a class="nav-link" href="/matches">Matches</a>
 					      </li>
                   {{else}}
-					      {{!-- <li class="nav-item">
-						      <a class="nav-link" href="/signup">SignUp</a>
-					      </li> --}}
+					      <li class="nav-item">
+						      <a class="nav-link" href="/login">Signup/Login</a>
+					      </li>
                      
 
                   {{/if}}
