--- a/views/movie/movies-details.hbs
+++ b/views/movie/movies-details.hbs
@@ -10,14 +10,21 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
 {{/gt}}
 <div class="movie_card movie_card-details" id="bright">
     <div class="info_section">
+
       <div class="movie_header">
         <img class="locandina" src={{movieDetails.poster}}/>
+        <div>
+            <form action="/favorites/{{movieDetails.imdbid}}/add" method="POST">
+                <button class="fav-button" type="submit"><img class="logo-button" src="/images/heart-filme4.png" alt="saas"></button>
+            </form>
+        </div>
         <h1><a class="clean-a2" href="/movies-details/{{imdbid}}">{{movieDetails.title}}</a></h1>
         <ul>
             <li><h4 class="movie-details-card-width">Runtime: {{movieDetails.runtime}}</h4></li>
             <li><h4 class="movie-details-card-width">Rating: {{movieDetails.rating}}</h4></li>
             <li><h4 class="movie-details-card-width">Plot: {{movieDetails.plot}}</h4></li>
         </ul>
+
       </div>
       <div class="movie_desc">
       </div>
@@ -28,6 +35,18 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
       </div>
     </div>
     {{!-- <img class="blur_back" src={{poster}} alt=""> --}}
+                
+            {{!-- Favoritar --}}
+            <form action="/favorites/{{movieDetails.imdbid}}/add" method="POST">
+               <button class="fav-button" type="submit">Favorite</button>
+            </form>
+            
+            {{!-- Deletar --}}
+            <form action="/favorites-details/{{movieDetails.imdbid}}/delete" method="POST">
+                <button type="submit">Delete</button>
+            </form>
+            
+            
 </div>
 
     </div>
