--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -47,6 +47,9 @@
                   <div class="field">
                      <input type="text" name="username" placeholder="Username" required>
                   </div>
+                    <div class="field">
+                        <input type="text" name="name" placeholder="Name" required>
+                    </div>
                   <div class="field">
                      <input type="password" name="password" placeholder="Password" required>
                   </div>
