--- a/views/auth/matches.hbs
+++ b/views/auth/matches.hbs
@@ -1,6 +1,4 @@
-<h1>Matches:</h1>
 
-<h3>Welcome to {{userDetail.username}} and {{userDetail.date}} matches!</h3>
 <div class="row"></div>
 {{#if arrayMoviesMatches}}
     {{#each arrayMoviesMatches}}
@@ -8,7 +6,7 @@
     <div class="info_section">
       <div class="movie_header">
         <img class="locandina" src={{poster}}/>
-        <h1><a class="clean-a2" href="/movies-details/{{imdbid}}">{{title}}</a></h1>
+        <h1><a class="clean-a2" href="/matches-details/{{imdbid}}">{{title}}</a></h1>
         <h4>{{year}}</h4>
       </div>
       <div class="movie_desc">
