new icons effects

--- a/views/auth/matches-details.hbs
+++ b/views/auth/matches-details.hbs
@@ -13,7 +13,7 @@
         </div>
         <div>
             <form action="/favorites/{{movieDetails.imdbid}}/add" method="POST">
-                <button class="fav-button" type="submit"><img class="logo-button" src="/images/heart1.png" alt="saas"></button>
+                <button class="fav-button" type="submit"><img class="logo-button" src="/images/heart1-grey.png" alt="saas"></button>
             </form>
         </div>
         <h1><a class="clean-a2" href="/movies-details/{{imdbid}}">{{movieDetails.title}}</a></h1>
