--- a/views/movie/movies-list.hbs
+++ b/views/movie/movies-list.hbs
@@ -1,11 +1,11 @@
-<h1>Movie List</h1>
+{{!-- <h1>Movie List</h1>
 {{!-- {{#each test.results}}
 
 <p>{{title}}</p>
 
 {{/each}}
  --}}
-<div class="row">
+{{!-- <div class="row">
     {{#each searchResult.results}}
 <div class="col-md-4">
     <div class="card cards-flex">
@@ -17,4 +17,4 @@
     </div>
 </div>
 {{/each}}
-</div>
+</div> --}} --}}
