--- a/views/auth/favorites-details.hbs
+++ b/views/auth/favorites-details.hbs
@@ -5,7 +5,7 @@
     <div class="info_section">
       <div class="movie_header">
         <img class="locandina" src={{poster}}/>
-        <h1><a class="clean-a2" href="/movies-details/{{imdbid}}">{{title}}</a></h1>
+        <h1><a class="clean-a2" href="/favorites-details/{{imdbid}}">{{title}}</a></h1>
         <h4>{{year}}</h4>
       </div>
       <div class="movie_desc">
