--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -48,7 +48,7 @@
                      <input type="text" name="username" placeholder="Username" required>
                   </div>
                     <div class="field">
-                        <input type="text" name="name" placeholder="Name" required>
+                        <input type="text" name="name" placeholder="Username" required>
                     </div>
                   <div class="field">
                      <input type="password" name="password" placeholder="Password" required>
