--- a/views/auth/matches.hbs
+++ b/views/auth/matches.hbs
@@ -17,8 +17,11 @@
         </ul>
       </div>
     </div>
-    <img class="blur_back src="{{poster}}" alt="">
+    <img class="blur_back" src="{{poster}}" alt="">
+  </div>
   </div>
     {{/each}}
+    {{else}}
+    <h2 class="color-white">No matches yet, search for some movies</h2>
 {{/if}}
-</div>
+
